[package]
name = "trackaudio"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
rust-version = "1.85.0"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt", "time"] }
tokio-tungstenite = "0.28"
tokio-util = "0.7"
tracing = { version = "0.1", optional = true }
tungstenite = "0.28"
url = "2.5"

[dev-dependencies]
assert_matches = "1.5"
test-log = { version = "0.2", features = ["trace"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }