[package]
name = "trackaudio"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
rust-version = "1.85"
repository = "https://github.com/MorpheusXAUT/trackaudio-rs"
keywords = ["vatsim", "trackaudio"]
categories = ["api-bindings", "asynchronous", "network-programming", "web-programming::websocket"]
readme = "README.md"
description = "A high-level async client for the TrackAudio WebSocket API, enabling programmatic control, automation, and custom integrations for VATSIM voice communication."
exclude = [
    "deny.toml",
    ".github/",
    ".gitignore",
    ".idea/",
]

[features]
default = ["reconnect-jitter", "tracing"]
reconnect-jitter = ["dep:rand"]
tracing = ["dep:tracing"]

[dependencies]
futures-util = "0.3"
rand = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt", "time"] }
tokio-tungstenite = "0.28"
tokio-util = "0.7"
tracing = { version = "0.1", optional = true }
tungstenite = "0.28"
url = "2.5"

[dev-dependencies]
assert_matches = "1.5"
test-log = { version = "0.2", features = ["trace"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }